Fix align

--- a/services/app/src/components/Room/Queue.scss
+++ b/services/app/src/components/Room/Queue.scss
@@ -6,8 +6,6 @@
   min-width: 500px;
   max-width: 600px;
 
-  flex-grow: 1;
-
   @media screen and (max-width: 500px) {
     & {
       width: 100%;
